# panopticon

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  template.html
extension/: extension.js  metadata.json  prefs.js
extension/schemas/: org.gnome.shell.extensions.panopticon.gschema.xml
src/: main.rs
